# deep_mtg

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
deep_mtg/: datamodels.py  functions.py
deep_mtg/scripts/: build_deck.py
deep_mtg/tools/: __init__.py  retrievers.py  rules_retriever.py
dev/: card_rag.ipynb  card_summaries.md  deck_builder_agent.ipynb  deck_builder_graph.ipynb  rules_rag.ipynb
openai_dev/: agents.ipynb  chain_of_thought.ipynb  classification.ipynb  extraction.ipynb  semantic_search.ipynb  simple_chat.ipynb  summarisation.ipynb
openai_dev2/: agents.ipynb  chain_of_thought.ipynb  extraction.ipynb  semantic_search.ipynb  simple_chat.ipynb  summarisation.ipynb
tests/: test_tools.py
